# banana-appeal

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.beads/: config.yaml  issues.jsonl  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  issues.jsonl
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: beads-setup.md  gemini-capabilities.md  python-3.14-resources.md
docs/plans/: 2025-12-10-rename-to-depict-mcp.md  2025-12-10-structured-responses-design.md  2025-12-10-structured-responses-implementation.md
src/banana_appeal/: __init__.py  models.py  server.py
tests/: __init__.py  conftest.py  test_build.py  test_models.py  test_server.py
