[project]
name = "banana-appeal"
version = "0.1.0"
description = "A-peel-ing image generation MCP server powered by Gemini 3 Pro Image"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Chris Vaillancourt", email = "chris@chrisvaillancourt.io" }]
maintainers = [{ name = "Chris Vaillancourt", email = "chris@chrisvaillancourt.io" }]
keywords = [
    "mcp",
    "gemini",
    "image-generation",
    "ai",
    "claude",
    "fastmcp",
    "google-ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastmcp>=2,<3",
    "google-genai>=1,<2",
    "pillow>=11,<12",
    "pydantic>=2,<3",
    "anyio>=4,<5",
    "stamina>=24,<25",
]

[project.urls]
Homepage = "https://github.com/chrisvaillancourt/banana-appeal"
Documentation = "https://github.com/chrisvaillancourt/banana-appeal#readme"
Repository = "https://github.com/chrisvaillancourt/banana-appeal"
Issues = "https://github.com/chrisvaillancourt/banana-appeal/issues"
Changelog = "https://github.com/chrisvaillancourt/banana-appeal/blob/main/CHANGELOG.md"

[project.scripts]
banana-appeal = "banana_appeal.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0,<1",
    "pytest-cov>=6,<7",
    "ruff>=0,<1",
    "pyrefly>=0,<1",
    "commitizen>=4,<5",
    "build>=1,<2",
    "twine>=6,<7",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0,<1",
    "pytest-cov>=6,<7",
    "ruff>=0,<1",
    "pyrefly>=0,<1",
    "commitizen>=4,<5",
    "build>=1,<2",
    "twine>=6,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/banana_appeal"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

# uv configuration
[tool.uv]
add-bounds = "major"

# Commitizen configuration for conventional commits
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version",
    "src/banana_appeal/__init__.py:__version__",
]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
major_version_zero = true

# Ruff configuration
[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["banana_appeal"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG"]  # Pytest fixtures look unused but are injected
"src/banana_appeal/server.py" = ["TC003", "ARG001"]  # Path used at runtime, lifespan signature required by FastMCP

# Pyrefly configuration
[tool.pyrefly]
search_path = ["src"]

# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (may require API key)",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/banana_appeal"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
